Fix badge position on mobile

--- a/admin/style/default.css
+++ b/admin/style/default.css
@@ -5171,9 +5171,6 @@ tr.ui-sortable-handle:hover {
 }
 
 @media screen and (max-width: 43em) {
-  .badge-block {
-    right: -5px;
-  }
   .badge-icon {
     top: 5px;
   }
