--- a/admin/style/scss/partials/_utils.scss
+++ b/admin/style/scss/partials/_utils.scss
@@ -85,9 +85,6 @@ tr.ui-sortable-handle {
 }
 
 @media screen and (max-width: $mobile-screen) {
-  .badge-block {
-    right: -5px;
-  }
   .badge-icon {
     top: 5px;
   }
